Fix gallery paddings on mobile devices

--- a/themes/hodoandmarie/source/assets/css/components/_gallery.scss
+++ b/themes/hodoandmarie/source/assets/css/components/_gallery.scss
@@ -1,10 +1,11 @@
 .gallery {
-	margin-top: 0;
-	margin-bottom: 0;
 	@include make-row();
 
-	@include media-breakpoint-down(md) {
-		margin-bottom: 1.25rem; // 20px;
+	margin-top: 0;
+	margin-bottom: 1.25rem; // 20px;
+
+	@include media-breakpoint-up(lg) {
+		margin-bottom: 0;
 	}
 
 	img {
@@ -41,10 +42,8 @@
 	&.gallery-2 {
 		p {
 			margin-bottom: 1.25rem; // 20px;
-
 			@include media-breakpoint-up(sm) {
 				margin-bottom: 0;
-
 				@include make-col-ready();
 				@include make-col(6);
 			}
